# vibervn-context-engine

./: Cargo.toml
scripts/: incr_bench.sh  pipeline_bench.sh
skill/: SKILL.md
src/: chat.rs  cli.rs  config.rs  engine_boot.rs  engine_ops.rs  fs_tools.rs  lib.rs  main.rs  mcp.rs  server.rs
src/assets/: index.html
src/embedding/: cache.rs  voyage.rs
src/indexing/: events.rs  mod.rs  pipeline.rs  watcher.rs
src/llm/: mod.rs  openai.rs
src/parsing/: mod.rs
src/prompts/: chat_project_docs_appendix.txt  chat_system.txt  chat_tool_codebase.txt  chat_tool_file.txt  chat_tool_grep.txt  chat_tool_read.txt  llm_respond_in_json.txt  mcp_codebase_retrieval.txt  mcp_degrade_index_failed.txt  mcp_degrade_indexing.txt  mcp_file_retrieval.txt  mcp_file_retrieval_hint.txt  mcp_file_retrieval_repo.txt  mod.rs  rerank_agentic_system.txt  rerank_agentic_system_exact_tools.txt  rerank_agentic_tool_add_chunks.txt  rerank_agentic_tool_grep.txt  rerank_agentic_tool_query.txt  rerank_agentic_tool_read.txt  rerank_agentic_user.txt  rerank_element_spec.txt  rerank_intro.txt  rerank_system_structured.txt  rerank_system_xml.txt  rerank_user_structured.txt  rerank_user_xml.txt
src/query/: engine.rs  graph_expand.rs  reranker.rs
src/router/: jobobject.rs  mcp_proxy.rs  mod.rs  plan.rs  proxy.rs  registry.rs  sidecar.rs  spawn.rs  worker.rs
src/store/: mod.rs  ops.rs
src/vector/: mod.rs
tests/: cli_subcommand.rs  e2e_worker_lifecycle.rs  integration.rs  measure_cold_open.rs  repro_notepad.rs  router_integration.rs
(+4 files in other folders)
