[package]
name = "context-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
tempfile = "3"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
